[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene/Drag/DragSpeng.gd" type="Script" id=1]
[ext_resource path="res://Image/body_speng.png" type="Texture" id=3]
[ext_resource path="res://Image/home.png" type="Texture" id=4]
[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=5]
[ext_resource path="res://Image/Head_Speng.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 25.5708

[sub_resource type="CapsuleShape2D" id=5]
radius = 95.716
height = 216.568

[node name="DragMno" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.745098, 0.8, 0.101961, 1 )
texture = ExtResource( 5 )
centered = false

[node name="SpengRigidBody2D" type="RigidBody2D" parent="." groups=["Speng"]]
position = Vector2( 294.085, 29.184 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpengRigidBody2D"]
shape = SubResource( 1 )

[node name="Pic" type="Sprite" parent="SpengRigidBody2D/CollisionShape2D"]
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="SpengRigidBody2D"]

[node name="BackBT" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 933.631
margin_top = 1781.25
margin_right = 1061.63
margin_bottom = 1909.25
texture_normal = ExtResource( 4 )

[node name="Scores" type="Label" parent="."]
margin_left = 86.5956
margin_top = 711.352
margin_right = 106.596
margin_bottom = 758.352
custom_colors/font_color = Color( 0.701961, 0.756863, 0.901961, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"

[node name="SpengWrong" type="Sprite" parent="." groups=["speng_wrong"]]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 8 )

[node name="BodyArea2D" type="Area2D" parent="."]
position = Vector2( 74.142, 1820 )
scale = Vector2( 0.5, 0.5 )

[node name="body" type="Sprite" parent="BodyArea2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea2D"]
shape = SubResource( 5 )

[connection signal="pressed" from="BackBT" to="." method="_on_BackBT_pressed"]
[connection signal="body_entered" from="BodyArea2D" to="." method="_on_MnoArea2D_body_entered"]
[connection signal="input_event" from="BodyArea2D" to="." method="_on_Area2D_input_event"]
